--- a/static/app.css
+++ b/static/app.css
@@ -40,7 +40,7 @@ body {
     font-family: 'Abril Fatface', cursive;
 }
  .nav-score h4 {
-     margin: 5px 50px;
+     margin: 5px 60px;
  }
 
  .start-content {
@@ -64,13 +64,38 @@ body {
  }
 
 .game-sections {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 10px 25px;
-    padding: 10px 0px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-.game-sections section {
-    text-align: center;
+.gameboard {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    /* grid-template-columns: 40px 40px 40px 40px 40px; */
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 30px;
+    /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr; */
+    margin: 20px;
+
 }
+
+.board-square {
+    background-color: rgb(228, 187, 151);
+    color: rgb(88, 75, 83);
+    border-radius: 15%;
+    border: 1px solid rgb(88, 75, 83);
+    box-shadow: 10px 5px 5px rgb(88, 75, 83);
+    text-align: center;
+    font-weight: 600;
+    font-size: 2.5em;
+    text-shadow: 1px 1px rgb(254, 245, 239);
+    margin: 5px;
+}
+
+.user-interaction, .guess-history {
+    justify-self: center;
+    margin-top: 20px;
+    list-style-type: none;
+}   
+
