--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 <section class="start-content container">
     <p>Let's play the ultimate word search game!</p>
-    <form class="start-game" action="/game">
+    <form class="start-game" action="/init">
         <button class="btn btn-color start-btn">Start the Game!</button>
     </form>
 </section>
